test/corpus/keyword_case.txt
==================
Mixed case control flow
==================

Program P
If a Then
	b := 1;
ElsIf c Then
	b := 2;
Else
	b := 3;
End_If;
End_Program

---

(source
  (program_declaration
    name: (identifier)
    body: (block
      (if_statement
        condition: (identifier)
        consequence: (block
          (assignment
            identifier: (identifier)
            expression: (integer_literal)))
        alternative: (elsif_clause
          condition: (identifier)
          consequence: (block
            (assignment
              identifier: (identifier)
              expression: (integer_literal))))
        alternative: (else_clause
          body: (block
            (assignment
              identifier: (identifier)
              expression: (integer_literal))))))))

==================
Mixed case boolean operators
==================

x := a And b Or Not c Xor d;

---

(source
  (block
    (assignment
      identifier: (identifier)
      expression: (boolean_operator
        left: (boolean_operator
          left: (identifier)
          right: (identifier))
        right: (boolean_operator
          left: (unary_expression
            (identifier))
          right: (identifier))))))

==================
Mixed case MOD
==================

x := a mod 2;
y := b MOD 2;
z := c Mod 2;

---

(source
  (block
    (assignment
      identifier: (identifier)
      expression: (binary_operator
        left: (identifier)
        right: (integer_literal)))
    (assignment
      identifier: (identifier)
      expression: (binary_operator
        left: (identifier)
        right: (integer_literal)))
    (assignment
      identifier: (identifier)
      expression: (binary_operator
        left: (identifier)
        right: (integer_literal)))))

==================
Mixed case loops
==================

For i := 0 To 9 By 2 Do
	Exit;
End_For

While x Do
	Continue;
End_While

Repeat
	x := 1;
Until y
End_Repeat

---

(source
  (block
    (for_statement
      variable: (identifier)
      start: (integer_literal)
      end: (integer_literal)
      by: (integer_literal)
      body: (block
        (exit)))
    (while_statement
      condition: (identifier)
      body: (block
        (continue)))
    (repeat_statement
      body: (block
        (assignment
          identifier: (identifier)
          expression: (integer_literal)))
      condition: (identifier))))

==================
Mixed case declarations
==================

Function_Block Fb Extends Base
Var_Input
	x : Int;
End_Var
End_Function_Block

---

(source
  (function_block_declaration
    name: (identifier)
    (extends_clause
      base: (identifier))
    var_section: (var_input
      (variable_declaration
        name: (identifier)
        type: (type_name
          (identifier))))))

==================
A keyword is not a prefix of a longer identifier
==================

Supervisor.Restart := TRUE;
Ifx := 1;
Formatter := 2;
Variance := 3;
Ending := 4;

---

(source
  (block
    (assignment
      identifier: (qualified_identifier
        (identifier)
        (identifier))
      expression: (true))
    (assignment
      identifier: (identifier)
      expression: (integer_literal))
    (assignment
      identifier: (identifier)
      expression: (integer_literal))
    (assignment
      identifier: (identifier)
      expression: (integer_literal))
    (assignment
      identifier: (identifier)
      expression: (integer_literal))))
